test/fail/mixins/Mixin1.mo
mixin() {
  var f1 = 0;
  public func m1() : async () { };
  system func preugprade() {}; // reject system function in mixin
};
